Switch to old java syntax :(